<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.davidvan.mortgagecalculator.MainActivity">

    <TextView
        android:id="@+id/amount_header"
        android:text="@string/header"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/amount_to_borrow"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/amount_header"
        android:hint="@string/amount_to_borrow"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/seek_bar_text"
        android:text="@string/seek_bar_text"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/amount_to_borrow"/>

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/seek_bar_text"
        android:max="200"
        android:progress="100" />

    <TextView
        android:id="@+id/seek_bar_rate"
        android:text="SeekBar Number Here"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seek_bar"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/loan_term_text"
        android:text="@string/loan_term"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/seek_bar_rate" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loan_term_text">

        <RadioButton
            android:id="@+id/radio_15_years"
            android:text="@string/radio_15_years"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

        <RadioButton
            android:id="@+id/radio_20_years"
            android:text="@string/radio_20_years"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

        <RadioButton
            android:id="@+id/radio_30_years"
            android:text="@string/radio_30_years"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/checkbox_taxes_insurance"
        android:text="@string/set_taxes_insurance"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/calculated_total"
        android:text="@string/calculated_total"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/checkbox_taxes_insurance" />

    <Button
        android:id="@+id/calculate"
        android:text="@string/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        style="@style/Widget.AppCompat.Button.Colored"/>

</RelativeLayout>
